# clickyX

./: .gitattributes  .gitignore  AGENTS.md  ANALYSIS_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  agent-hud.html  cliff.toml  index.html  package-lock.json  package.json  playwright.config.ts  rust-toolchain.toml  tsconfig.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml  flatpak.yml  nightly.yml  release.yml
.specify/: feature.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
docs/: BRIDGE_API.md  CLICKY_APP_ANALYSIS.md  CONFIGURATION.md  FEATURE_SPEC.md  FRONTEND_UI_AUDIT.md  LINUX_BUGS.md  MACOS_BUGS.md  PENDING_ITEMS.md  PROJECT_SPEC.md  SETUP.md  WINDOWS_BUGS.md
e2e/: app.spec.ts  chat.spec.ts  settings.spec.ts  visual.spec.ts
flatpak/: com.clickyx.ClickyX.yml
packaging/: clickyx.spec
public/onboarding/: README.md
public/sounds/: README.md
scripts/: notarize-macos.sh  sign-macos.sh  sign-windows.ps1  validate-skills.js
skills/_shared/: OpenClickySkillCompatibilityPolicy.md
skills/agent-builder/: agent-builder.js  agent-builder.toml
skills/airtable/: airtable.js  airtable.toml
skills/api-tester/: api-tester.js  api-tester.toml
skills/audio-transcriber/: audio-transcriber.js  audio-transcriber.toml
skills/blog-writer/: blog-writer.js  blog-writer.toml
skills/calendar-assistant/: calendar-assistant.js  calendar-assistant.toml
skills/citation-finder/: citation-finder.js  citation-finder.toml
skills/clipboard-manager/: clipboard-manager.js  clipboard-manager.toml
skills/code-review/: code-review.js  code-review.toml
skills/codex/: manage-codex.js  manage-codex.toml
skills/concept-explainer/: concept-explainer.js  concept-explainer.toml
skills/context-summarizer/: context-summarizer.js  context-summarizer.toml
skills/cron-helper/: cron-helper.js  cron-helper.toml
skills/csv-analyzer/: csv-analyzer.js  csv-analyzer.toml
skills/data-visualizer/: data-visualizer.js  data-visualizer.toml
skills/dependency-auditor/: dependency-auditor.js  dependency-auditor.toml
src/: AgentHUDApp.tsx  App.tsx  bindings.ts  global.d.ts  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  export-types.sh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: export_types.rs
src-tauri/icons/: icon.icns
src-tauri/resources/: version.rc
src-tauri/src/: bridge.rs  bridge_auth.rs  commands.rs  config.rs  cua.rs  gen3d.rs  lib.rs  main.rs  overlay.rs  permissions.rs  platform.rs  tray.rs  type_mode.rs  updater.rs
src-tauri/src/accessibility/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/agent/: codex.rs  dock.rs  google.rs  mod.rs  session.rs  skills.rs
src-tauri/src/ai/: anthropic.rs  app_contexts.rs  catalog.rs  guidance.rs  mod.rs  openai.rs  streaming.rs
src-tauri/src/audio/: capture.rs  capture_thread.rs  handoff.rs  mod.rs  pipeline.rs  stt.rs  tts.rs  voices.rs  wake_word.rs
src-tauri/src/automation/: mod.rs
src-tauri/src/overlay/: lifecycle.rs  manager.rs  mod.rs  mod.rs.bak  screen_router.rs  window_manager.rs
src-tauri/src/screen/: auto_capture.rs  capture.rs  coordinate.rs  mod.rs
(+249 files in other folders)
