[package]
name = "clickyx"
version = "0.1.0"
description = "ClickyX - Cross-platform AI companion"
authors = ["ClickyX Contributors"]
edition = "2021"

[lib]
name = "clickyx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
actix-web = "4"
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
dirs = "5"
log = "0.4"
env_logger = "0.11"
