[package]
name = "clickyx"
version = "0.1.0"
description = "ClickyX - Cross-platform AI companion"
authors = ["ClickyX Contributors"]
edition = "2021"

[lib]
name = "clickyx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
actix-web = "4"
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
dirs = "5"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
async-trait = "0.1"
futures-util = "0.3"
regex = "1"
cpal = "0.15"
hound = "3.5"
uuid = { version = "1", features = ["v4"] }
xcap = "0.4"
base64 = "0.22"
toml = "0.8"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
